add facebook login button

--- a/views/login.pug
+++ b/views/login.pug
@@ -25,4 +25,4 @@ html(lang='en')
                 button.btn.btn-success(type='submit') 登入
                 a.btn.btn-primary(href='./register.html') 註冊
                 button#fb-login.btn.btn-default(type='button')
-                  span.fa.fa-facebook-official
+                  a.btn.fa.fa-facebook-official(href='/auth/facebook')
