--- a/views/login.pug
+++ b/views/login.pug
@@ -17,12 +17,12 @@ html(lang='en')
             .panel-heading
               h1 登入
             .panel-body
-              form
+              form(action='/checkLogin' method='post')
                 .form-group
                   input.form-control(name='email', type='email', placeholder='Email')
                 .form-group
                   input.form-control(name='password', type='password', placeholder='Password')
                 button.btn.btn-success(type='submit') 登入
-                a.btn.btn-primary(href='./register.html') 註冊
+                a.btn.btn-primary(href='/register') 註冊
                 button#fb-login.btn.btn-default(type='button')
                   a.btn.fa.fa-facebook-official(href='/auth/facebook')
