add session, fix RESTful name

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -18,7 +18,7 @@ html(lang='en')
 						h1.text-hide ICU
 				p.navbar-text Give All Machine Information For You
 				.btn-group.navbar-right
-					a.navbar-text(href='') aver803bath261@gmail.com
+					a.navbar-text(href='') #{email}
 		.container-fluid(style='height: 100%;')
 			.row
 				.col-md-2
