--- a/views/login.pug
+++ b/views/login.pug
@@ -17,7 +17,7 @@ html(lang='en')
             .panel-heading
               h1 登入
             .panel-body
-              form(action='/checkLogin' method='post')
+              form(action='/login' method='post')
                 .form-group
                   input.form-control(name='email', type='email', placeholder='Email')
                 .form-group
