--- a/views/register.pug
+++ b/views/register.pug
@@ -17,7 +17,7 @@ html(lang='en')
 						.panel-heading
 							h1 註冊
 						.panel-body
-							form(action='/insertUser', method='post')
+							form(action='/register', method='post')
 								.form-group
 									input.form-control(name='email', type='email', placeholder='Email')
 								.form-group
