add img files: loginBackground, registerBackground; modify all views; modify all.css; modify all.js

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -7,57 +7,82 @@ html(lang='en')
 		link(rel='stylesheet', href='/public/css/font-awesome.min.css')
 		link(rel='stylesheet', href='/public/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/public/css/all.css')
-		script(src='/public/js/jquery-3.0.0.min.js')
+		script(src='/public/js/jquery-3.1.1.min .js')
+		script(src='/public/js/all.js')
 		script(src='/public/js/bootstrap.min.js')
 	body
-		nav.navbar.navbar-inverse
-			.container-fluid
-				.navbar-header
-					a.navbar-brand(href='#')
-						span.fa.fa-home
-						h1.text-hide ICU
-				p.navbar-text Give All Machine Information For You
-				.btn-group.navbar-right
-					a.navbar-text(href='') #{email}
-		.container-fluid(style='height: 100%;')
-			.row
-				.col-md-2
-					.list-group
-						a.list-group-item.active(href='#')
-							h4.list-group-item-heading Panel
-						a.list-group-item.list-group-item-info(href='') Cras justo odio
-						a.list-group-item.list-group-item-info(href='') Cras justo odio
-						a.list-group-item.list-group-item-info(href='') Cras justo odio
-						a.list-group-item.list-group-item-info(href='') Cras justo odio
-						a.list-group-item.list-group-item-info(href='') Cras justo odio
-				.col-md-10
-					.panel.panel-default
-						.panel-heading Panel heading without title
-						.panel-body
-							| Panel content
-						table.table.table-striped.table-hover
-							thead
-								tr
-									th IP
-									th CPU Temperature
-									th Process
-									th Memory Used
-									th Login Number
-							tr
-								td 140.127.220.78
-								td 1000 degree
-								td 999
-								td 0.1%
-								td 1
-							tr
-								td ...
-								td ...
-								td ...
-								td ...
-								td ...
-							tr
-								td ...
-								td ...
-								td ...
-								td ...
-								td ...
+		.fill-screen
+			nav.navbar.navbar-inverse
+				.container-fluid
+					.navbar-header
+						a.navbar-brand(href='#')
+							| ICU
+							h1 ICU
+					.collapse.navbar-collapse
+						ul.nav.navbar-nav.navbar-right
+							li.dropdown
+								a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
+									i.fa.fa-user
+									|  #{email}
+								ul.dropdown-menu
+									li
+										a(href='#')
+											i.fa.fa-sign-out
+											|  Logout
+									li
+										a(href='#')
+											i.fa.fa-user
+											|  User Information
+			.fill-screen.ICU-body
+				.ICU-side-nav.container-relative.pull-left
+					ul.nav.nav-pills.nav-stacked
+						li.nav-link.overview
+							a(href='/') Main View
+						li
+							a(href='/') My Machines
+						li
+							a(href='/Alarms') Event/Alarms
+				.ICU-content.container-relative.container-fluid
+					.ICU-widget.col-sm-12.ICU-widget-full-page
+						.ICU-widget-header
+							.row
+								.col-sm-4
+									h4
+										i.fa.fa-server.fa-fw
+										|  My Machines
+								.col-sm-8
+									h4.align-right
+										input.search-machine(type='text', placeholder='Search')
+										a.btn.btn-success(href='')
+											i.fa.fa-plus
+										a(href='')
+											i.fa.fa-info-circle
+						.ICU-widget-container.gateway-list
+							.ICU-widget-wrapper
+								.response-table
+									table.ICU-widget-table.table-hover
+										thead
+											tr(celpadding='2')
+												th.text-center Status
+												th Name
+												th IP
+												th Start Time
+												th Actions
+												th
+													button.btn.btn-default(type='button') Select All
+										tbody
+											tr
+												td(colspan='6')
+													h3
+														| Get Start!
+.modal.fade(tabindex='-1', role='dialog')
+	.modal-dialog(role='document')
+		.modal-content
+			.modal-header
+				button.close(type='button', data-dismiss='modal', aria-label='Close')
+					span(aria-hidden='true') ×
+				h4.modal-title 
+			.modal-body
+				p 
+			.modal-footer
+				button.btn.btn-default(type='button', data-dismiss='modal') Close
