modify all views; modify all.css; modify all.js

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -11,7 +11,8 @@ html(lang='en')
 		script(src='/public/js/all.js')
 		script(src='/public/js/bootstrap.min.js')
 	body
-		.fill-screen
+		#loader
+		.fill-screen.content
 			nav.navbar.navbar-inverse
 				.container-fluid
 					.navbar-header
