--- a/views/login.pug
+++ b/views/login.pug
@@ -11,7 +11,8 @@ html
     script(src='/public/js/bootstrap.min.js')
     script(src='/public/js/all.js')
   body
-    .container-fluid.relative.loginBody.fill-screen
+    #loader
+    .container-fluid.relative.loginBody.fill-screen.content
       .row.loginPage
         .col-md-4.col-md-offset-4
           .panel.panel-default
