--- a/views/register.pug
+++ b/views/register.pug
@@ -11,7 +11,8 @@ html
 		script(src='/public/js/bootstrap.min.js')
 		script(src='/public/js/all.js')
 	body
-		.container-fluid.relative.fill-screen.registerBody
+		#loader
+		.container-fluid.relative.fill-screen.registerBody.content
 			.row
 				.col-md-4.col-md-offset-4
 					.panel.panel-default
