modlify server.js; modify all.js; modify view login

--- a/views/login.pug
+++ b/views/login.pug
@@ -38,3 +38,8 @@ html
           p 
         .modal-footer
           button.btn.btn-default(type='button', data-dismiss='modal') Close
+  if success == true
+    script.
+      $('.modal-title').text('Success')
+      $('.modal-body').find('p').text("Register Succeed!")
+      $('.modal').modal('show')
