--- a/views/register.pug
+++ b/views/register.pug
@@ -26,7 +26,7 @@ html
 									input.form-control(name='password', type='password', placeholder='Password', required='required')
 								.form-group
 									input.form-control(name='passwordCheck', type='password', placeholder='Password Check', required='required')
-								button.btn.btn-primary#registerButton(type='button')
+								button.btn.btn-primary.btn-lg.btn-block#registerButton(type='button')
 									| Register
 	.modal.fade(tabindex='-1', role='dialog')
 		.modal-dialog(role='document')
