--- a/views/login.pug
+++ b/views/login.pug
@@ -8,6 +8,7 @@ html
     link(rel='stylesheet', href='/public/css/font-awesome.min.css')
     link(rel='stylesheet', href='/public/css/all.css')
     script(src='/public/js/jquery-3.1.1.min .js')
+    script(src='/public/js/sha256.min.js')
     script(src='/public/js/bootstrap.min.js')
     script(src='/public/js/all.js')
   body
