modify view dashboard; modify all.js

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -27,7 +27,7 @@ html(lang='en')
 									|  #{email}
 								ul.dropdown-menu
 									li
-										a(href='/logout')
+										a(href='#')#logoutLink
 											i.fa.fa-sign-out
 											|  Logout
 									li
