--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -64,6 +64,7 @@ html(lang='en')
 									table.ICU-widget-table.table.table-hover#machinesTable
 										thead
 											tr(celpadding='2')
+												th.text-center Check
 												th.text-center Name
 												th IP
 												//- th OS
@@ -99,6 +100,17 @@ html(lang='en')
 					span(aria-hidden='true') ×
 				h4.modal-title 
 			.modal-body#alertMessage
+				p 
+			.modal-footer
+				button.btn.btn-default(type='button', data-dismiss='modal') Close
+.modal.fade#machineInfo(tabindex='-1', role='dialog')
+	.modal-dialog(role='document')
+		.modal-content
+			.modal-header#machineInfoHeader
+				button.close(type='button', data-dismiss='modal', aria-label='Close')
+					span(aria-hidden='true') ×
+				h4.modal-title 
+			.modal-body#machineInfoMessage
 				p 
 			.modal-footer
 				button.btn.btn-default(type='button', data-dismiss='modal') Close
