--- a/views/machineInfo.pug
+++ b/views/machineInfo.pug
@@ -87,7 +87,7 @@ html(lang='en')
 			.modal-footer
 				button.btn.btn-success(type='button', id='addMachineButton') Add Machine
 				button.btn.btn-default(type='button', data-dismiss='modal') Close
-.modal.fade(tabindex='-1', role='dialog')
+.modal.fade#alert(tabindex='-1', role='dialog')
 	.modal-dialog(role='document')
 		.modal-content
 			.modal-header#alertHeader
