--- a/views/register.pug
+++ b/views/register.pug
@@ -29,14 +29,14 @@ html
 									input.form-control(name='passwordCheck', type='password', placeholder='Password Check', required='required')
 								button.btn.btn-primary.btn-lg.btn-block#registerButton(type='button')
 									| Register
-	.modal.fade(tabindex='-1', role='dialog')
+	.modal.fade#alert(tabindex='-1', role='dialog')
 		.modal-dialog(role='document')
 			.modal-content
-				.modal-header
+				.modal-header#alertHeader
 					button.close(type='button', data-dismiss='modal', aria-label='Close')
 						span(aria-hidden='true') ×
 					h4.modal-title 
-				.modal-body
+				.modal-body#alertMessage
 					p 
 				.modal-footer
 					button.btn.btn-default(type='button', data-dismiss='modal') Close
