--- a/views/machineInfo.pug
+++ b/views/machineInfo.pug
@@ -64,7 +64,8 @@ html(lang='en')
 								.container-fluid
 									ul.list-group
 										li.list-group-item#OS OS:  
-										li.list-group-item#upTime Uptime:  
+										li.list-group-item#upTime Uptime:
+										li.list-group-item#cpuUsage CPU Usage:  
 										li.list-group-item#cpuPlatform CPU Platform:  
 										li.list-group-item#cpuModel CPU Model:  
 										li.list-group-item#cpuCores CPU Cores: 
