--- a/views/machineInfo.pug
+++ b/views/machineInfo.pug
@@ -61,7 +61,7 @@ html(lang='en')
 										a(href='#') Charts
 									li(role='presentation')
 										a(href='#') Messages
-								.container-fluid
+								.container-fluid#machineInfoContent
 									ul.list-group
 										li.list-group-item#OS OS:  
 										li.list-group-item#upTime Uptime:
