--- a/views/register.pug
+++ b/views/register.pug
@@ -1,43 +1,30 @@
-doctype html
-html
-	head
-		meta(charset='UTF-8')
-		meta(name='viewport', content='width=device-width, initial-scale=1.0')
-		title Register
-		link(rel='stylesheet', href='/public/css/bootstrap.min.css')
-		link(rel='stylesheet', href='/public/css/font-awesome.min.css')
-		link(rel='stylesheet', href='/public/css/all.css')
-		script(src='/public/js/jquery-3.1.1.min .js')
-		script(src='/public/js/sha256.min.js')
-		script(src='/public/js/bootstrap.min.js')
-		script(src='/public/js/all.js')
-	body
-		#loader
-		.container-fluid.relative.fill-screen.registerBody.content
-			.row
-				.col-md-4.col-md-offset-4
-					.panel.panel-default
-						.panel-heading
-							h1 ICU Register
-						.panel-body
-							form(action='/register', method='post')
-								.form-group
-									input.form-control(name='email', type='email', placeholder='Email', required='required')
-								.form-group
-									input.form-control(name='password', type='password', placeholder='Password', required='required')
-								.form-group
-									input.form-control(name='passwordCheck', type='password', placeholder='Password Check', required='required')
-								button.btn.btn-primary.btn-lg.btn-block#registerButton(type='button')
-									| Register
-	.modal.fade#alert(tabindex='-1', role='dialog')
-		.modal-dialog(role='document')
-			.modal-content
-				.modal-header#alertHeader
-					button.close(type='button', data-dismiss='modal', aria-label='Close')
-						span(aria-hidden='true') ×
-					h4.modal-title 
-				.modal-body#alertMessage
-					p 
-				.modal-footer
-					button.btn.btn-default(type='button', data-dismiss='modal') Close
-						
+extends common/header
+block body
+	#loader
+	.container-fluid.relative.fill-screen.registerBody.content
+		.row
+			.col-md-4.col-md-offset-4
+				.panel.panel-default
+					.panel-heading
+						h1 ICU Register
+					.panel-body
+						form(action='/register', method='post')
+							.form-group
+								input.form-control(name='email', type='email', placeholder='Email', required='required')
+							.form-group
+								input.form-control(name='password', type='password', placeholder='Password', required='required')
+							.form-group
+								input.form-control(name='passwordCheck', type='password', placeholder='Password Check', required='required')
+							button.btn.btn-primary.btn-lg.btn-block#registerButton(type='button')
+								| Register
+.modal.fade#alert(tabindex='-1', role='dialog')
+	.modal-dialog(role='document')
+		.modal-content
+			.modal-header#alertHeader
+				button.close(type='button', data-dismiss='modal', aria-label='Close')
+					span(aria-hidden='true') ×
+				h4.modal-title
+			.modal-body#alertMessage
+				p
+			.modal-footer
+				button.btn.btn-default(type='button', data-dismiss='modal') Close
