--- a/views/alarms.pug
+++ b/views/alarms.pug
@@ -16,7 +16,7 @@ html(lang='en')
 			nav.navbar.navbar-inverse
 				.container-fluid
 					.navbar-header
-						a.navbar-brand(href='#')
+						a.navbar-brand(href='/')
 							| ICU
 							h1 ICU
 					.collapse.navbar-collapse
