--- a/views/machineInfo.pug
+++ b/views/machineInfo.pug
@@ -6,7 +6,7 @@ block body
 		nav.navbar.navbar-inverse
 			.container-fluid
 				.navbar-header
-					a.navbar-brand(href='#')
+					a.navbar-brand(href='/')
 						| ICU
 						h1 ICU
 				.collapse.navbar-collapse
