add dirty link ;)

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -46,7 +46,7 @@ block body
 									input.search-machine(type='text', placeholder='Search')
 									button(type='button', id='openAddMachineButton').btn.btn-success
 										i.fa.fa-plus
-									a(href='')
+									a(href='https://noob.tw')
 										i.fa.fa-info-circle
 					.ICU-widget-container.gateway-list
 						.ICU-widget-wrapper
