--- a/views/alarms.pug
+++ b/views/alarms.pug
@@ -17,6 +17,7 @@ html(lang='en')
 				.container-fluid
 					.navbar-header
 						a.navbar-brand(href='/')
+							i.fa.fa-eye
 							| ICU
 							h1 ICU
 					.collapse.navbar-collapse
