--- a/views/machineInfo.pug
+++ b/views/machineInfo.pug
@@ -7,6 +7,7 @@ block body
 			.container-fluid
 				.navbar-header
 					a.navbar-brand(href='/')
+						i.fa.fa-eye
 						| ICU
 						h1 ICU
 				.collapse.navbar-collapse
