fix status .text-center

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -57,7 +57,7 @@ block body
 											th.text-center Check
 											th.text-center Name
 											th IP
-											th Status
+											th.text-center Status
 											th Edit
 											th Delete
 											//- 	button.btn.btn-default(type='button') Select All
