fix dashboard typo

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -24,7 +24,7 @@ block body
 								li
 									a(href='#', data-email=email)#openUpdateUserForm
 										i.fa.fa-user
-										|  User Information
+										|  Change Password
 		.fill-screen.ICU-body
 			.ICU-side-nav.container-relative.pull-left
 				ul.nav.nav-pills.nav-stacked
@@ -121,7 +121,7 @@ block body
 				.modal-header
 					button.close(type='button', data-dismiss='modal', aria-label='Close')
 						span(aria-hidden='true') ×
-					h4.modal-title Change Passord
+					h4.modal-title Change Password
 				.modal-body
 					form
 						.form-group
