add change password modal to all dashboard views

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -131,5 +131,5 @@ block body
 						.form-group
 							input(type='password', name='new-password-check', placeholder='Confirm new password').form-control
 				.modal-footer
-					button.btn.btn-success(type='button', id='doUpdateUserButton') Edit Machine
+					button.btn.btn-success(type='button', id='doUpdateUserButton') Change Password
 					button.btn.btn-default(type='button', data-dismiss='modal') Close
