--- a/views/machineInfo.pug
+++ b/views/machineInfo.pug
@@ -22,7 +22,7 @@ block body
 										i.fa.fa-sign-out
 										|  Logout
 								li
-									a(href='#')
+									a(href='#', data-email=email)#openUpdateUserForm
 										i.fa.fa-user
 										|  User Information
 		.fill-screen.ICU-body
@@ -85,3 +85,21 @@ block body
 					p
 				.modal-footer
 					a.goHome.btn.btn-default(href='/', data-dismiss='modal') Close
+	.modal.fade#editUserForm(tabindex='-1', role='dialog')
+		.modal-dialog(role='document')
+			.modal-content
+				.modal-header
+					button.close(type='button', data-dismiss='modal', aria-label='Close')
+						span(aria-hidden='true') ×
+					h4.modal-title Change Password
+				.modal-body
+					form
+						.form-group
+							input(type='password', name='old-password', placeholder='Old Password').form-control
+						.form-group
+							input(type='password', name='new-password', placeholder='New Password').form-control
+						.form-group
+							input(type='password', name='new-password-check', placeholder='Confirm new password').form-control
+				.modal-footer
+					button.btn.btn-success(type='button', id='doUpdateUserButton') Change Password
+					button.btn.btn-default(type='button', data-dismiss='modal') Close
