--- a/public/css/all.css
+++ b/public/css/all.css
@@ -196,8 +196,8 @@ nav h1 {
 }
 
 path {
-    stroke: steelblue;
-    stroke-width: 2;
+    stroke: #77ac98;
+    stroke-width: 3;
     fill: none;
 }
 .axis {
@@ -210,7 +210,8 @@ path {
     stroke-opacity: .5;
 }
 .x.axis path {
-    display: none;
+	stroke: #000;
+    stroke-dasharray: 0,1000;
 }
 .y.axis line,
 .y.axis path {
